k8s/K8s_OBJ/Ingress/Many_domain_svc_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: s1
          servicePort: 80
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: s2
          servicePort: 80

#foo.bar.com --|                 |-> foo.bar.com s1:80
#              | 178.91.123.132  |
#bar.foo.com --|                 |-> bar.foo.com s2:80
