k8s/K8s_OBJ/Ingress/Many_services_svc_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /foo
        backend:
          serviceName: s1
          servicePort: 80
      - path: /bar
        backend:
          serviceName: s2
          servicePort: 80


# foo.bar.com -> 178.91.123.132 -> / foo    s1:80
#                                  / bar    s2:80
